welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:1: error: illegal start of simple expression
def in3050(a:Int, b:Int):Boolean = {if ((30<=a && 40 >= a) && (30<=b && 40 >= b)) {true} else {if ((40<=a && 50 >= a) && (40<=b && 50 >= b))} else {false}}} 
                                                                                                                                            ^in3050:1: error: ';' expected but 'else' found.
def in3050(a:Int, b:Int):Boolean = {if ((30<=a && 40 >= a) && (30<=b && 40 >= b)) {true} else {if ((40<=a && 50 >= a) && (40<=b && 50 >= b))} else {false}}} 
                                                                                                                                              ^in3050:2: error: Unmatched closing brace '}' ignored here
 }
 ^